testing/tests/ui/json-too-many-args.stderr
error: `json` filter accepts at most 1 argument; its arguments are: ([indent])
 --> OneTwoThree.txt:1:13
       "3) }}"
 --> tests/ui/json-too-many-args.rs:6:34
  |
6 | #[template(ext = "txt", source = "{{ 1|json(2, 3) }}")]
  |                                  ^^^^^^^^^^^^^^^^^^^^
